--- a/Parcial N°1.tex
+++ b/Parcial N°1.tex
@@ -51,17 +51,43 @@
  
 Gracias a los apuntes y grabaciones de clase se estan haciendo pruebas para afianzar el conocimiento para poder asimilarlo  al nivel del examen.
 
-Decidimos utilizar 8 integrados para que cada uno controlara 8 leds y asi completar los 64 leds.
+Decidimos utilizar 8 integrados para que cada uno controlara 8 leds y asi completar los 64 leds requeridos.
+
+En la Figura (\ref{fig:circuito}) se muestra el circuito a utilizar en el examen.
+\begin{figure}[h]
+\includegraphics[width=12cm]{circuito.jpg}
+\centering
+\caption{Circuito final}
+\label{fig:circuito}
+\end{figure}
 
 
 \section{Esquema que describa las tareas que se definieron en el desarrollo del algoritmo.}\label{intro}
 
 
 
-
 \section{Esquema donde describa las tareas que se definieron en el desarrollo del algoritmo.}\label{intro}
 
+\newpage
+\section{Algoritmo implementado.}\label{intro}
+Algoritmo base.
+\begin{figure}[h]
+\includegraphics[width=12cm]{Algoritmo.jpeg}
+\centering
+\caption{Algoritmo Implementado}
+\label{fig:Algoritmo}
+\end{figure}
+
+
+
+
 \section{Problemas de desarrollo.}\label{intro}
+
+Se usa el comando shiftOut() la cual se encarga de desplazar hacia la salida un bit cada vez, comienza a partir del bit mas significativo o menos significativo en este caso se inicio desde el bit  menos significativo usando el comando LSBFIRST.
+
+Se programaron los 3 pines que van conectados del arduino al integrado en OUTPUT (salida).
+
+Se hace una funcion donde se ordena desde bit mas significativo 
 
 \section{Evolución del algoritmo y consideraciones a tener en cuenta en la implementación.}\label{intro}
 
