--- a/Parcial N°1.tex
+++ b/Parcial N°1.tex
@@ -87,8 +87,18 @@ Se usa el comando shiftOut() la cual se encarga de desplazar hacia la salida un 
 
 Se programaron los 3 pines que van conectados del arduino al integrado en OUTPUT (salida).
 
-Se hace una funcion donde se ordena desde bit mas significativo 
+Se obtiene que los leds formen la figura.
+\begin{figure}[h]
+\includegraphics[width=12cm]{figura #5.jpeg}
+\centering
+\caption{Figura final}
+\label{fig:figura #5}
+\end{figure}
 
+
+
+
+\newpage
 \section{Evolución del algoritmo y consideraciones a tener en cuenta en la implementación.}\label{intro}
 
 
