--- a/Parcial N°1.tex
+++ b/Parcial N°1.tex
@@ -78,28 +78,36 @@ Algoritmo base.
 \label{fig:Algoritmo}
 \end{figure}
 
-
-
-
+\newpage
 \section{Problemas de desarrollo.}\label{intro}
-
 Se usa el comando shiftOut() la cual se encarga de desplazar hacia la salida un bit cada vez, comienza a partir del bit mas significativo o menos significativo en este caso se inicio desde el bit  menos significativo usando el comando LSBFIRST.
 
 Se programaron los 3 pines que van conectados del arduino al integrado en OUTPUT (salida).
 
 Se obtiene que los leds formen la figura.
+
 \begin{figure}[h]
-\includegraphics[width=12cm]{figura #5.jpeg}
+\includegraphics[width=10cm]{figura #5.jpeg}
 \centering
 \caption{Figura final}
 \label{fig:figura #5}
 \end{figure}
 
-
-
+Siempre que el usuario ingrese alguna opcion siempre aparecera de la primero la figura.
 
 \newpage
 \section{Evolución del algoritmo y consideraciones a tener en cuenta en la implementación.}\label{intro}
+Se crea un menu de manera que el usuario se le facilite la opcion que quiera elegir.
+
+\begin{figure}[h]
+\includegraphics[width=10cm]{Avance 1.jpeg}
+\centering
+\caption{Avance del codigo}
+\label{fig:Avance 1}
+\end{figure}
+
+
+
 
 
 
