--- a/Parcial N°1.tex
+++ b/Parcial N°1.tex
@@ -96,6 +96,22 @@ Se obtiene que los leds formen la figura.
 Siempre que el usuario ingrese alguna opcion siempre aparecera de la primero la figura.
 
 \newpage
+
+Se le muestra al usuario por medio de la funcion "verificacion" que todos los leds funcionan.
+
+\begin{figure}[h]
+\includegraphics[width=10cm]{Verificacion.jpeg}
+\centering
+
+\caption{Verificacion}
+\label{fig:Verificacion}
+\end{figure}
+
+
+
+
+
+\newpage
 \section{Evolución del algoritmo y consideraciones a tener en cuenta en la implementación.}\label{intro}
 Se crea un menu de manera que el usuario se le facilite la opcion que quiera elegir.
 
@@ -105,6 +121,17 @@ Se crea un menu de manera que el usuario se le facilite la opcion que quiera ele
 \caption{Avance del codigo}
 \label{fig:Avance 1}
 \end{figure}
+
+En la primera opcion esta la verificacion donde el usuario observará que todos los leds funcionan.
+\newpage
+\begin{figure}[h]
+\includegraphics[width=10cm]{Avance 2.jpeg}
+\centering
+\caption{Avance del codigo}
+\label{fig:Avance 2}
+\end{figure}
+
+
 
 
 
