--- a/Parcial N°1.tex
+++ b/Parcial N°1.tex
@@ -107,6 +107,14 @@ Se le muestra al usuario por medio de la funcion "verificacion" que todos los le
 \label{fig:Verificacion}
 \end{figure}
 
+Creacion de la funcion imagen, en este caso se ingreso que una fila alumbrara y la siguiente no.
+\begin{figure}[h]
+\includegraphics[width=10cm]{Avance 3.jpeg}
+\centering
+\caption{La imagen que ingreso el usuario.}
+\label{fig:Avance 3}
+\end{figure}
+
 
 
 
@@ -130,6 +138,16 @@ En la primera opcion esta la verificacion donde el usuario observará que todos 
 \caption{Avance del codigo}
 \label{fig:Avance 2}
 \end{figure}
+
+
+
+
+
+
+
+
+
+
 
 
 
