--- a/Parcial N°1.tex
+++ b/Parcial N°1.tex
@@ -139,6 +139,15 @@ En la primera opcion esta la verificacion donde el usuario observará que todos 
 \label{fig:Avance 2}
 \end{figure}
 
+Se crea la funcion "imagen" la cual da la orden a cada led de encender o apagar segun el usuario lo desee ingresando "1" si quiere encenderlo o "0" si desea apagarlo, formando asi la figura que desea.
+
+\begin{figure}[h]
+\includegraphics[width=10cm]{Imagen.jpeg}
+\centering
+\caption{Avance del codigo}
+\label{fig:Imagen}
+\end{figure}
+
 
 
 
